# rusty-mod-manager

./: .eslintrc-auto-import.json  .eslintrc.js  .gitignore  .prettierignore  README.md  biome.json  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  auto-imports.d.ts  env.d.ts  main.ts  typed-router.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json  template.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/controllers/: file_controller.rs  mod.rs  plugin_controller.rs  steam_controller.rs
src-tauri/src/deployer/vfs/: base_vfs.rs  mod.rs  union_fs.rs  union_fs_fuse.rs
src-tauri/src/instances/: instance_mod.rs  mod.rs
src-tauri/src/mods/: mod.rs
src-tauri/src/mods/downloader/: events.rs  mod.rs
src-tauri/src/mods/ipc/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/state/config/: mod.rs  nexusmods_config.rs  vfs_config.rs
src/components/display/: DateDisplay.vue  ExecutableIcon.vue  VariableDisplay.vue
src/components/inputs/: FileInput.vue  FolderInput.vue
src/components/instance/: NewInstanceDialog.vue
src/components/selectableTable/: SelectableTable.vue
src/components/settings/: GlobalConfigTab.vue  InstanceConfigTab.vue  InstancePathConfig.vue  NexusModsConfig.vue
src/components/vfs/: VFSConfig.vue
src/installer/: AppInstaller.vue  index.html  main.ts
src/installer/components/: FilePicker.vue  Fomod.vue  FomodGroup.vue  FomodGroupOption.vue  FomodStep.vue  ModVersion.vue
src/installer/stores/: FomodStore.ts  InstallerStore.ts
src/installer/utils/: DescriptionParser.ts
src/lib/: bindings.ts  bindingsFront.ts  taurpc.ts
src/pages/: index.vue
src/pages/instances/: current.vue  index.vue  new.vue
src/pages/instances/current/: downloads.vue  executables.vue  mods.vue  settings.vue
src/plugins/: router.ts  vuetify.ts
src/stores/: ApplicationStateStore.ts  FrontendStateStore.ts
