[package]
name = "rusty_mod_manager"
version = "0.3.0"
description = "Native Mod Manager made using Rust"
authors = ["Neil Seligmann"]
license = "MIT"
repository = "https://github.com/Uninen/tauri-vue-template"
default-run = "rusty_mod_manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.100"
serde = { version = "1.0.167", features = ["derive"] }
typetag = "0.2"
tauri = { version = "1.4.1", features = [ "system-tray",
	"cli",
	"api-all",
] }
taurpc = "0.2.6"
specta = { version = "=2.0.0-rc.9", features = ["export", "typescript"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
regex = "1.10.6"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
bytes = "1"
tokio-util = "0.6"
warp = "0.3"
rand = "0.8"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.1"
file_integrity = "0.1.7"
urlencoding = "2.1.3"
libayatana-appindicator = "0.2.0"
compress-tools = "0.15.0"
ico = "0.3.0"
image = "0.25.2"
base64 = "0.22.1"
steamlocate = "1.2.1"
esplugin = { git = "https://github.com/Ortham/esplugin.git", version = "6.1.0" }
libloadorder = { git = "https://github.com/NeilSeligmann/libloadorder.git", version = "17.0.1" }
unrar = "0.5.3"
infer = "0.16.0"
# time = { version = "0.3.36", features = ["parsing", "formatting"] }

[dev-dependencies]
tempfile = "3.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
